--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://serhii-shmyhelskyi.github.io/react_to_do_list/",
   "name": "webpack-reactjs",
   "version": "1.0.0",
   "description": "",
